kube-specs/ppap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paypaapay
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      paypaapay: backend
  template:
    metadata:
      labels:
        paypaapay: backend
    spec:
      containers:
        - name: uwsgi-server
          image: ppapcr.azurecr.io/ppapcr/uwsgi-server:v1
          resources:
            requests: # minimum resources required
              cpu: 100m
              memory: 64Mi
            limits: # maximum resources allocated
              cpu: 500m
              memory: 256Mi
        - name: nginx-alpine
          image: ppapcr.azurecr.io/ppapcr/nginx-alpine:v1
          resources:
            requests: # minimum resources required
              cpu: 100m
              memory: 64Mi
            limits: # maximum resources allocated
              cpu: 500m
              memory: 256Mi
