kube-specs/ppap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ppap-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    ppap: backend
  ports:
    - port: 80
      targetPort: 80
