kube-specs/ppap-ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ppap-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - 40-113-123-6.nip.io
      secretName: ppap-web-cert
  rules:
    - host: 40-113-123-6.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: ppap-svc
              servicePort: 80
